crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_assistant_text_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=
│   │ Response                              # [-]=   [fg=#3b4261 b]=│  [fg=#37f499 b]=Response [-]=                           [-]=
│   │ Sure! I can help with that. Let me    # [-]=   [fg=#3b4261 b]=│  [fg=#ebfafa]=Sure! I can help with that. Let me [-]=
│   │ take a look.                          # [-]=   [fg=#3b4261 b]=│  [fg=#ebfafa]=take a look. [-]=                       [-]=
