crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_assistant_text_normal.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│     Sure! I can help with that. Let me take a look.                               # [-]=   [fg=#37f499 b]=   [fg=#ebfafa]=Sure! I can help with that. Let me take a look. [-]=                            [-]=
