crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_error_message_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=
│     ⚠ Error                               # [-]=   [fg=#f16c75 b]=   [fg=#f16c75 b]=⚠ Error [-]=                            [-]=
│     Provider request failed:              # [-]=   [fg=#f16c75 b]=   [fg=#ebfafa]=Provider request failed: [-]=           [-]=
│     connection refused                    # [-]=   [fg=#f16c75 b]=   [fg=#ebfafa]=connection refused [-]=                 [-]=
│                                           # [-]=
