crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_error_message_normal.snap
---
source: src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   │ ⚠ Error                                                                       # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=│  [fg=#f16c75 bg=#171928 b]=⚠ Error [bg=#171928]=                                                                    [bg=#171928]=  
│   │ Provider request failed: connection refused                                   # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=│  [fg=#ebfafa bg=#171928]=Provider request failed: connection refused [bg=#171928]=                                [bg=#171928]=
