crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_reasoning_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=                                        
│     Thinking ✓  I need to check the f…    # [-]=   [fg=#a48cf2 b]=   [fg=#a48cf2 b]=Thinking ✓ [-]=   [fg=#a48cf2 i]=I need to check the f… [-]=
