crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_reasoning_normal.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                                                                   # [-]=                                                                                
│     Thinking ✓  I need to check the file structure first.                         # [-]=   [fg=#a48cf2 b]=   [fg=#a48cf2 b]=Thinking ✓ [-]=   [fg=#a48cf2 i]=I need to check the file structure first. [-]=                      [-]=
