crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_startup_banner_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│     thndrs / ready                        # [-]=   [fg=#3b4261]=   [fg=#37f499 b]=thndrs [fg=#abb4da b]= / ready [-]=                     [-]=
│     Ask for change, run a command,        # [-]=   [fg=#abb4da]=  Ask for change, run a command, [-]=     [-]=
│     or inspect the repo.                  # [-]=   [fg=#abb4da]=  or inspect the repo. [-]=               [-]=
│                                           # [-]=
│                                           # [-]=
