crates/thndrs/src/cli/renderer/snapshots/thndrs_lib__cli__renderer__transcript__tests__transcript_status_entry_narrow.snap
---
source: crates/thndrs/src/cli/renderer/transcript/tests.rs
expression: contents
---
│                                           # [-]=                                        
│     Context  context  AGENTS.md (scop…    # [-]=   [fg=#abb4da]=   [fg=#abb4da]=Context [-]=   [fg=#abb4da]=context  AGENTS.md (scop… [-]=
